--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -3,115 +3,160 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HongShi-DoH UI</title>
+  <title>HongShi‑DoH — DNS-over-HTTPS Resolver</title>
   <link rel="icon" href="/favicon.png">
   <style>
-    :root{ --bg:#0b1020; --card:#121836; --accent:#6aa6ff; --muted:#c8cff9; --border:#2a3170; }
-    *{ box-sizing:border-box }
-    body{ margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background:var(--bg); color:#e8ecff }
-    .wrap{ max-width:980px; margin:0 auto; padding:28px 16px }
-    header{ display:flex; align-items:center; gap:12px; margin-bottom:16px }
-    .avatar{ width:42px; height:42px; border-radius:12px; border:1px solid var(--border); object-fit:cover }
-    .brand{ font-size:22px; font-weight:700 }
-    .card{ background:var(--card); border:1px solid var(--border); border-radius:16px; padding:18px; box-shadow:0 10px 30px rgba(0,0,0,.35) }
-    .row{ display:flex; gap:12px; flex-wrap:wrap; margin:10px 0 16px }
-    input,select{ flex:1; min-width:200px; background:#0f1430; border:1px solid var(--border); color:#e8ecff; padding:12px 14px; border-radius:12px; outline:none }
-    button{ background:var(--accent); color:#05122b; border:0; border-radius:12px; padding:12px 18px; font-weight:800; cursor:pointer; box-shadow:0 12px 24px rgba(106,166,255,.25) }
-    button:disabled{ opacity:.6; cursor:not-allowed }
-    .muted{ color:var(--muted) }
-    .grid{ display:grid; grid-template-columns: 1fr 1fr; gap:16px; margin-top:16px }
-    @media (max-width: 800px){ .grid{ grid-template-columns: 1fr } }
-    pre{ background:#0b1333; border:1px solid var(--border); padding:12px; border-radius:12px; overflow:auto }
-    table{ width:100%; border-collapse: collapse }
-    th,td{ padding:8px 10px; border-bottom:1px solid #1e244f }
-    .tag{ display:inline-block; font-size:12px; padding:2px 6px; border-radius:999px; background:#0f1430; border:1px solid var(--border); color:var(--muted) }
+    :root {
+      --bg1: #ff8a00; --bg2: #ff5e62;
+      --panel: rgba(255,255,255,.9);
+      --border: rgba(255,255,255,.35);
+      --text: #222;
+      --muted: #555;
+      --brand: #ff6a3d;
+      --brand2:#2979ff;
+      --radius: 18px;
+      --shadow: 0 24px 80px rgba(255,94,98,.25);
+    }
+    * { box-sizing: border-box }
+    html, body { height: 100% }
+    body {
+      margin: 0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      background: radial-gradient(1200px 800px at 80% -20%, #ffd6b0 0, transparent 60%),
+                  radial-gradient(1000px 900px at -10% 110%, #ffd2c6 0, transparent 60%),
+                  linear-gradient(135deg, var(--bg1), var(--bg2));
+      color: var(--text);
+    }
+    .wrap { min-height: 100%; display: grid; place-items: center; padding: 32px 16px }
+    .card {
+      width: 880px; max-width: 100%;
+      background: var(--panel); backdrop-filter: blur(10px);
+      border: 1px solid var(--border); border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 22px;
+    }
+    header { display: flex; align-items: center; gap: 14px; margin-bottom: 10px }
+    .avatar { width: 48px; height: 48px; border-radius: 14px; border: 1px solid var(--border); object-fit: cover }
+    .title { font-size: 28px; font-weight: 800; letter-spacing: .3px }
+    .subtitle { color: var(--muted); margin-bottom: 14px }
+    .row { display: grid; grid-template-columns: 1fr auto; gap: 10px }
+    .field { display: grid; grid-template-columns: 1fr; gap: 10px; margin: 12px 0 18px }
+    label { font-size: 13px; color: var(--muted) }
+    select, input {
+      background: #fff; border: 1px solid #e8e8e8; border-radius: 12px; padding: 12px 14px; outline: none;
+    }
+    .pair { display: grid; grid-template-columns: 1fr auto auto; gap: 10px }
+    button {
+      border: 0; border-radius: 12px; font-weight: 800; padding: 12px 16px; cursor: pointer;
+    }
+    .btn-main { background: var(--brand); color: #fff }
+    .btn-sub  { background: #eef3ff; color: #1a2b6c; border: 1px solid #d9e4ff }
+    .btn-clear{ background: #fff1ef; color: #9a3a24; border: 1px solid #ffd1c8 }
+    .grid { display: grid; grid-template-columns: 1fr; gap: 12px }
+    .panel { background: #fff; border: 1px solid #eee; border-radius: 14px; padding: 12px }
+    pre { margin: 0; white-space: pre-wrap; word-break: break-word }
+    .muted { color: var(--muted) }
+    .footer { text-align: center; color: #fff; margin-top: 14px; font-size: 13px }
+    .link { color:#fff; }
+    @media (min-width: 860px){ .grid { grid-template-columns: 1fr 1fr } }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <header>
-      <img class="avatar" src="/favicon.png" alt="avatar">
-      <div class="brand">HongShi-DoH</div>
-    </header>
-
     <div class="card">
-      <div class="row">
-        <input id="name" placeholder="example.com" value="example.com">
-        <select id="type">
-          <option value="all" selected>ALL (A + AAAA + NS)</option>
-          <option value="A">A</option>
-          <option value="AAAA">AAAA</option>
-          <option value="NS">NS</option>
-          <option value="TXT">TXT</option>
-          <option value="MX">MX</option>
-          <option value="CNAME">CNAME</option>
-        </select>
+      <header>
+        <img src="/favicon.png" class="avatar" alt="avatar">
+        <div class="title">DNS‑over‑HTTPS Resolver</div>
+      </header>
+      <div class="subtitle">选择 DoH 端点并查询任意域名的解析结果。</div>
+
+      <div class="field">
+        <label>选择 DoH 地址：</label>
         <select id="doh">
-          <option value="current" selected>当前站点</option>
-          <option value="https://dns.google/resolve">dns.google/resolve</option>
-          <option value="https://cloudflare-dns.com/resolve">cloudflare-dns.com/resolve</option>
+          <option value="current">https://当前站点（/dns-query）</option>
+          <option value="https://cloudflare-dns.com/dns-query">Cloudflare — cloudflare-dns.com</option>
+          <option value="https://dns.google/dns-query">Google — dns.google</option>
           <option value="custom">自定义…</option>
         </select>
-        <input id="custom" style="display:none" placeholder="https://example.com/dns-query">
-        <button id="go">查询</button>
+        <input id="custom" placeholder="https://example.com/dns-query" style="display:none">
       </div>
-      <div class="muted">使用 <code>/resolve</code> JSON 接口；根路径 <code>/</code> 与 <code>/dns-query</code> 亦支持 RFC8484。</div>
-    </div>
 
-    <div class="grid">
-      <div class="card">
-        <div class="muted">简表</div>
-        <div id="table"></div>
+      <div class="field">
+        <label>待解析域名：</label>
+        <div class="pair">
+          <input id="name" placeholder="example.com" value="example.com">
+          <select id="type">
+            <option value="A">A</option><option value="AAAA">AAAA</option><option value="CNAME">CNAME</option>
+            <option value="NS">NS</option><option value="MX">MX</option><option value="TXT">TXT</option>
+          </select>
+          <button id="btn" class="btn-main">解析</button>
+        </div>
       </div>
-      <div class="card">
-        <div class="muted">原始 JSON</div>
-        <pre id="raw">{}</pre>
+
+      <div class="row" style="margin-bottom:12px">
+        <button id="btnJson" class="btn-sub">Get JSON</button>
+        <button id="btnClear" class="btn-clear">清除</button>
       </div>
+
+      <div class="grid">
+        <div class="panel">
+          <div class="muted" style="margin-bottom:6px">简表</div>
+          <div id="table">—</div>
+        </div>
+        <div class="panel">
+          <div class="muted" style="margin-bottom:6px">原始 JSON</div>
+          <pre id="raw">{} </pre>
+        </div>
+      </div>
+
+      <div class="footer">HongShi‑DoH · 基于 DoH 上游 · <a class="link" href="/">返回首页</a></div>
     </div>
   </div>
 
 <script>
 const $ = s=>document.querySelector(s);
-const nameI = $('#name'), typeS = $('#type'), dohS = $('#doh'), customI = $('#custom'), raw = $('#raw'), table = $('#table');
+const dohS=$('#doh'), customI=$('#custom'), nameI=$('#name'), typeS=$('#type');
+const raw=$('#raw'), table=$('#table'), btn=$('#btn'), btnJson=$('#btnJson'), btnClear=$('#btnClear');
 
-dohS.addEventListener('change', ()=>{
-  customI.style.display = dohS.value==='custom' ? 'block':'none';
-});
+dohS.addEventListener('change', ()=>{ customI.style.display = dohS.value==='custom' ? 'block':'none'; });
 
-function rrToStr(rr){
-  if (!rr) return '';
-  return rr.data || rr.ip || rr.txt || (typeof rr === 'string' ? rr : JSON.stringify(rr));
+function dohEndpoint() {
+  if (dohS.value==='current') return location.origin + '/dns-query';
+  if (dohS.value==='custom')  return customI.value.trim();
+  return dohS.value;
+}
+
+function rrToString(a){
+  return a.data || a.ip || a.txt || a.target || a.value || (typeof a === 'string' ? a : JSON.stringify(a));
 }
 
 function renderTable(json){
-  const ans = json.Answer || [];
-  if (!ans.length){ table.innerHTML = '<div class="muted">无记录</div>'; return; }
-  table.innerHTML = '<table><thead><tr><th>类型</th><th>名称</th><th>值</th><th>TTL</th></tr></thead><tbody>' +
-    ans.map(a=>`<tr><td><span class="tag">${a.type}</span></td><td>${a.name||''}</td><td>${rrToStr(a)}</td><td>${a.TTL||a.ttl||''}</td></tr>`).join('') +
-    '</tbody></table>';
+  const A = json.Answer || [];
+  if (!A.length){ table.innerHTML = '—'; return; }
+  const rows = A.map(a=>`<tr>
+    <td>${a.type||''}</td><td>${a.name||''}</td><td>${rrToString(a)}</td><td>${a.TTL||a.ttl||''}</td>
+  </tr>`).join('');
+  table.innerHTML = `<table style="width:100%;border-collapse:collapse">
+    <thead><tr><th>类型</th><th>名称</th><th>值</th><th>TTL</th></tr></thead>
+    <tbody>${rows}</tbody></table>`;
 }
 
-async function query(){
+async function query(doJson=false){
   const name = nameI.value.trim(); if (!name) return alert('请输入域名');
-  let doh = dohS.value==='current' ? location.origin + '/dns-query' : (dohS.value==='custom' ? customI.value.trim() : dohS.value);
-  if (!doh) return alert('请输入自定义 DoH 地址');
-  const u = new URL(location.origin + '/resolve');
+  const doh = dohEndpoint(); if (!doh) return alert('请填写自定义 DoH 地址');
+  const base = doJson ? (doh.replace('/dns-query','/resolve')) : (location.origin + '/resolve');
+  const u = new URL(base);
   u.searchParams.set('name', name);
   u.searchParams.set('type', typeS.value);
-  u.searchParams.set('doh', doh);
-  try{
-    const res = await fetch(u.toString());
-    const json = await res.json();
-    raw.textContent = JSON.stringify(json, null, 2);
-    renderTable(json);
-  } catch (e){
-    raw.textContent = String(e);
-    table.innerHTML = '<div class="muted">请求失败</div>';
-  }
+  if (!doJson) u.searchParams.set('doh', doh); // 让本站代理上游
+  const r = await fetch(u.toString());
+  const j = await r.json();
+  raw.textContent = JSON.stringify(j, null, 2);
+  renderTable(j);
 }
 
-$('#go').addEventListener('click', query);
-nameI.addEventListener('keydown', e=>{ if(e.key==='Enter') query(); });
+btn.addEventListener('click', ()=>query(false));
+btnJson.addEventListener('click', ()=>query(true));
+btnClear.addEventListener('click', ()=>{ raw.textContent='{}'; table.innerHTML='—'; });
 </script>
 </body>
 </html>
